tests/compile-fail/duplicate_feature.stderr
error: duplicate feature
 --> tests/compile-fail/duplicate_feature.rs:6:28
  |
6 | #[enum_tools(sorted(name), sorted(name))]
  |                            ^^^^^^
